[gd_scene load_steps=7 format=3 uid="uid://b5s5vpwd8kmeh"]

[ext_resource type="Texture2D" uid="uid://b0lo5n87jg5op" path="res://asset/diabg.png" id="1_6lg4y"]
[ext_resource type="Script" path="res://Dialogue/dialogue.gd" id="1_t5x8s"]
[ext_resource type="FontFile" uid="uid://fh25nfwwou4i" path="res://asset/Heartbound_font.ttf" id="3_gb2io"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tlo1g"]
texture = ExtResource("1_6lg4y")

[sub_resource type="Gradient" id="Gradient_lv3k7"]
offsets = PackedFloat32Array(0, 0.990683)
colors = PackedColorArray(0, 0, 0, 0.588235, 0.160784, 0.160784, 0.160784, 0.666667)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_03kig"]
gradient = SubResource("Gradient_lv3k7")
fill_to = Vector2(0.784444, 0.0288889)

[node name="Dialogue" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t5x8s")

[node name="Options" type="VBoxContainer" parent="."]
top_level = true
custom_minimum_size = Vector2(250, 400)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_top = 30.0
offset_right = 199.0
offset_bottom = 456.0
grow_horizontal = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Panel" type="Panel" parent="."]
top_level = true
custom_minimum_size = Vector2(1024, 228)
layout_mode = 0
offset_left = 10.0
offset_top = 467.0
offset_right = 1166.0
offset_bottom = 720.0
scale = Vector2(1.1, 1)
theme_override_styles/panel = SubResource("StyleBoxTexture_tlo1g")

[node name="Label" type="Label" parent="Panel"]
texture_filter = 2
layout_mode = 0
offset_left = 80.0
offset_top = 7.0
offset_right = 1073.0
offset_bottom = 249.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gb2io")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NameLabel" type="Panel" parent="."]
top_level = true
custom_minimum_size = Vector2(102, 23)
layout_mode = 0
offset_left = 120.0
offset_top = 420.0
offset_right = 336.0
offset_bottom = 516.0
scale = Vector2(1.1, 1)
theme_override_styles/panel = SubResource("StyleBoxTexture_tlo1g")

[node name="Label" type="Label" parent="NameLabel"]
texture_filter = 2
layout_mode = 0
offset_right = 216.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gb2io")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TypingTimer" type="Timer" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 723.0
texture = SubResource("GradientTexture2D_03kig")

[node name="LeftPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 100.0
offset_right = 580.0
offset_bottom = 700.0
expand_mode = 1
stretch_mode = 2

[node name="RightPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 99.0
offset_right = 1120.0
offset_bottom = 699.0
expand_mode = 1
stretch_mode = 2
